@@ -7917,6 +7917,7 @@ var
     shellcallArchParam: string;
     go_on: boolean;
     tmpstr, searchmask: string;
+    retryOnReboot: boolean = false;
 
   begin
     targetDirectory := presetDir;
@@ -8169,6 +8170,7 @@ var
           (UpperCase(Expressionstr) = 'DEL') then
         begin
           search4file := True;
+          retryOnReboot := false;
           cpSpecify := 0;
           if UpperCase(Expressionstr) = 'DEL' then
             search4file := False;
@@ -8218,6 +8220,15 @@ var
                 LogDatei.log('Option -c detected: ', LLDebug2);
                 {$ELSE}
                 LogDatei.log('The del -c Option is Windows only', LLWarning);
+                {$ENDIF WINDOWS}
+              end
+              else if Expressionstr[j] = 'r' then
+              begin
+                {$IFDEF WINDOWS}
+                retryOnReboot := true;
+                LogDatei.log('Option -r detected: ', LLDebug2);
+                {$ELSE}
+                LogDatei.log('The del -r Option is Windows only', LLWarning);
                 {$ENDIF WINDOWS}
               end
               else if Expressionstr[j] = 'd' then
@@ -8279,7 +8290,7 @@ var
           begin
             LogDatei.log('we try to delete: ' + Source, LLDebug2);
             Install.AllDelete(Source, recursive, ignoreReadOnly,
-              daysback, search4file, RebootWanted);
+              daysback, search4file, RebootWanted,retryOnReboot);
           end;
           if RebootWanted and not (cpSpecify and cpNoExtraReboot = cpNoExtraReboot) then
           begin
